--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
             <h3>欢迎参加 VISA 2018 <br>
                 中国支付行业高峰论坛</h3>
         </header>
-        <main>
+        <form>
             <div>
                 <p class="question">1. 在全球200多个国家和地区共有多少商户受理 Visa? </p>
                 <div class="answer radios">
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio1">
+                            <input type="radio" name="merNums" value="3500万">
                             <span class="control-indicator"></span>
                             3500万
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio1">
+                            <input type="radio" name="merNums" value="4000万">
                             <span class="control-indicator"></span>
                             4000万
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio1">
+                            <input type="radio" name="merNums" value="4400万">
                             <span class="control-indicator"></span>
                             4400万
                         </label>
@@ -46,21 +46,21 @@
                 <div class="answer radios">
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio2">
+                            <input type="radio" name="atmNums" value="160万">
                             <span class="control-indicator"></span>
                             160万
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio2">
+                            <input type="radio" name="atmNums" value="210万">
                             <span class="control-indicator"></span>
                             210万
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio2">
+                            <input type="radio" name="atmNums" value="260万">
                             <span class="control-indicator"></span>
                             260万
                         </label>
@@ -72,21 +72,21 @@
                 <div class="answer radios">
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio3">
+                            <input type="radio" name="currencyNums" value="55种">
                             <span class="control-indicator"></span>
                             55种
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio3">
+                            <input type="radio" name="currencyNums" value="89种">
                             <span class="control-indicator"></span>
                             89种
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio3">
+                            <input type="radio" name="currencyNums" value="160种">
                             <span class="control-indicator"></span>
                             160种
                         </label>
@@ -98,21 +98,21 @@
                 <div class="answer radios">
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio4">
+                            <input type="radio" name="cardNums" value="31亿张">
                             <span class="control-indicator"></span>
                             31亿张
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio4">
+                            <input type="radio" name="cardNums" value="50亿张">
                             <span class="control-indicator"></span>
                             50亿张
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio4">
+                            <input type="radio" name="cardNums" value="66亿张">
                             <span class="control-indicator"></span>
                             66亿张
                         </label>
@@ -124,21 +124,21 @@
                 <div class="answer radios">
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio5">
+                            <input type="radio" name="headquarters" value="66亿张">
                             <span class="control-indicator"></span>
                             纽约
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio5">
+                            <input type="radio" name="headquarters" value="旧金山">
                             <span class="control-indicator"></span>
                             旧金山
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio5">
+                            <input type="radio" name="headquarters" value="伦敦">
                             <span class="control-indicator"></span>
                             伦敦
                         </label>
@@ -150,21 +150,21 @@
                 <div class="answer radios">
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio6">
+                            <input type="radio" name="bankNums" value="35">
                             <span class="control-indicator"></span>
                             35
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio6">
+                            <input type="radio" name="bankNums" value="56">
                             <span class="control-indicator"></span>
                             56
                         </label>
                     </div>
                     <div class="form-group">
                         <label class="control radio">
-                            <input type="radio" name="radio6">
+                            <input type="radio" name="bankNums" value="69">
                             <span class="control-indicator"></span>
                             69
                         </label>
@@ -174,29 +174,29 @@
             <div>
                 <p class="question">7.您就职的单位：</p>
                 <div class="answer input-text">
-                    <input type="text">
+                    <input type="text" name="company" maxlength="20">
                 </div>
             </div>
             <div>
                 <p class="question">8.您的职务：</p>
                 <div class="answer input-text">
-                    <input type="text">
+                    <input type="text" name="level">
                 </div>
             </div>
             <div>
                 <p class="question">9.您的姓名：</p>
                 <div class="answer input-text">
-                    <input type="text">
+                    <input type="text" name="name" maxlength="10">
                 </div>
             </div>
             <div>
-                <p class="question">10.您的联系方式：</p>
+                <p class="question">10.您的手机号：</p>
                 <div class="answer input-text">
-                    <input type="tel" maxlength="11">
+                    <input type="tel" maxlength="11" name="phone">
                 </div>
             </div>
             <button class="btn submit">确认</button>
-        </main>
+        </form>
     </div>
     <div class="survey-result hide">
         <div class="notice">
