--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
         <div class="desc">
             您的答卷已提交，感谢参与！ <br>
-            <span class="text-spec">iPhoneX</span> 大奖将于下午茶歇前揭晓，敬请期待。
+            <span class="text-spec">iPhone X</span> 大奖将于下午揭晓，敬请期待。
         </div>
         <button class="btn btn-about">关于讯联数据</button>
     </div>
